fix Searchbar style on mobile

--- a/src/Components/Searchbar/Searchbar.module.scss
+++ b/src/Components/Searchbar/Searchbar.module.scss
@@ -1,12 +1,12 @@
 @import "./../../SharedScss/mixins";
 
 .Searchbar {
-  // margin-top: 148px;
   display: flex;
-  // background-color: white;
   border-radius: 5px;
   height: 55px;
-  width: 480px;
+  flex-grow: 1;
+  max-width: 480px;
+  margin-right: 20px;
   @include defaultBoxShadow();
   input {
     background-color: transparent;
@@ -16,7 +16,7 @@
     &:focus {
       outline: none;
     }
-    &::placeholder{
+    &::placeholder {
       color: inherit;
     }
   }
@@ -29,5 +29,9 @@
     font-size: 16px;
     height: 100%;
     color: inherit;
+  }
+  @media screen and (max-width: 750px) {
+    max-width: 100%;
+    margin-right: 0;
   }
 }
